# deep-crypto-agent

./: .git-cleanup-instructions.md  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Dockerfile  MERGE_STRATEGY.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
abupy/: __init__.py
abupy/AlphaBu/: ABuPickBase.py  __init__.py
abupy/BetaBu/: ABuPositionBase.py  __init__.py
abupy/CoreBu/: ABu.py  ABuBase.py  ABuEnv.py  ABuFixes.py  ABuParallel.py  ABuPdHelper.py  ABuStore.py  __init__.py
abupy/FactorBuyBu/: ABuFactorBuyBase.py
abupy/TradeBu/: ABuOrder.py
config/: __init__.py  logging.yaml  settings.py
crypto_quant_pro/core/: __init__.py
crypto_quant_pro/core/engines/: __init__.py  abu_engine_adapter.py  backtesting_engine.py  event_dispatcher.py  models.py  paper_trading_engine.py  trading_engine.py
crypto_quant_pro/core/metrics/: __init__.py  abu_adapter.py  performance_calculator.py  report_generator.py  risk_metrics.py
crypto_quant_pro/core/risk/: __init__.py  abu_adapter.py  portfolio_optimizer.py  position_manager.py  risk_calculator.py  stop_loss.py
crypto_quant_pro/core/strategies/: __init__.py  abu_adapters.py  base.py  buy_strategies.py  sell_strategies.py  strategy_registry.py
crypto_quant_pro/data/: __init__.py
crypto_quant_pro/data/adapters/: __init__.py  abu_adapter.py
crypto_quant_pro/data/feeds/: __init__.py  crypto_exchanges.py  market_data_feed.py  traditional_markets.py
crypto_quant_pro/data/processing/: __init__.py  data_cleaner.py
crypto_quant_pro/data/storage/: __init__.py  database.py
crypto_quant_pro/ml/: __init__.py  abu_adapter.py
crypto_quant_pro/ml/inference/: __init__.py  predictor.py
crypto_quant_pro/ml/models/: __init__.py  price_predictor.py  strategy_optimizer.py
crypto_quant_pro/ml/training/: __init__.py  trainer.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  EXAMPLES.md  MIGRATION.md  README.md  STRATEGIES.md
legacy/: README.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_backtesting.py
tests/unit/: __init__.py
tests/unit/test_abupy/: __init__.py  test_abu_order.py  test_alpha_bu.py  test_beta_bu.py  test_core_bu.py  test_factor_buy.py
tests/unit/test_crypto_quant_pro/: __init__.py
tests/unit/test_crypto_quant_pro/core/engines/: test_abu_engine_adapter.py  test_backtesting_engine.py  test_event_dispatcher.py  test_paper_trading_engine.py  test_trading_engine.py
tests/unit/test_crypto_quant_pro/core/metrics/: test_performance_calculator.py
tests/unit/test_crypto_quant_pro/core/risk/: test_portfolio_optimizer.py  test_position_manager.py  test_risk_calculator.py  test_stop_loss.py
tests/unit/test_crypto_quant_pro/core/strategies/: __init__.py  test_base_strategy.py  test_buy_strategies.py  test_sell_strategies.py  test_strategy_registry.py
tests/unit/test_crypto_quant_pro/ml/: test_price_predictor.py  test_strategy_optimizer.py
